js/src/tests/test262/language/expressions/dynamic-import/syntax/valid/nested-async-arrow-function-await-empty-str-is-valid-assign-expr.js
(
async
(
)
=
>
{
await
import
(
'
'
)
}
)
;
reportCompare
(
0
0
)
;
