js/src/tests/test262/language/expressions/dynamic-import/syntax/invalid/nested-async-arrow-function-await-import-defer-assignment-expr-not-optional.js
DONOTEVALUATE
(
)
;
(
async
(
)
=
>
{
await
import
.
defer
(
)
}
)
;
